--- a/LiveTest/LiveTest.Client/Pages/DataGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/DataGrid.razor
@@ -8,6 +8,11 @@
 </h3>
 <DataGridComponent Name="Static" />
 <h3>
-    Interactive
+    Interactive Server
 </h3>
-<DataGridComponent Name="Interactive" @rendermode="@RenderMode.InteractiveAuto" />
+<DataGridComponent Name="Server" @rendermode="@RenderMode.InteractiveServer" />
+
+<h3>
+    Interactive Web Assembly
+</h3>
+<DataGridComponent Name="Webassembly" @rendermode="@RenderMode.InteractiveWebAssembly" />
