--- a/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
@@ -2,101 +2,67 @@
 @using TnTComponents.Events
 @using TnTComponents.Grid
 @using TnTComponents.Grid.Columns
-
+@using LiveTest.Client.Data
+@using LiveTest.Client.Repositories
+@inject IDataGridRepository _repo
 
 <TnTDataGrid Name="@(Name + 1)" Items="Items" ShowRowIndex="true" Appearance="DataGridAppearance.Default" MaxHeight="500" RowClickedCallback="@RowClicked">
     <TnTPropertyColumn Property="@((item) => item.Column1)" />
     <TnTPropertyColumn Property="@((item) => item.Column2)" />
     <TnTPropertyColumn Property="@((item) => item.Column3)" />
-    <TnTPropertyColumn Property="@((item) => item.Column4)" Format="Formatted {0}" />
-    <TnTPropertyColumn Property="@((item) => item.Column5)" Format="D6" />
-    <TnTPropertyColumn Property="@((item) => item.Column6)" Format="MMMM/dd/yyyy" />
-    <TnTPropertyColumn Property="@((item) => item.Column7)" />
-    <TnTPropertyColumn Property="@((item) => item.Column8)"  DefaultSort="true"/>
-    <TnTPropertyColumn Property="@((item) => item.Column9)" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 4" Format="Formatted {0}" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 5" Format="D6" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 6" Format="MMMM/dd/yyyy" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 7" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 8" DefaultSort="true" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 9" />
 </TnTDataGrid>
-@*
+
 <TnTDataGrid Name="@(Name + 2)" Items="Items" Appearance="DataGridAppearance.Stripped" MaxHeight="500" RowClickedCallback="@RowClicked">
     <TnTPropertyColumn Property="@((item) => item.Column1)" />
     <TnTPropertyColumn Property="@((item) => item.Column2)" />
     <TnTPropertyColumn Property="@((item) => item.Column3)" />
-    <TnTPropertyColumn Property="@((item) => item.Column4)" Format="" />
-    <TnTPropertyColumn Property="@((item) => item.Column5)" Format="D6" />
-    <TnTPropertyColumn Property="@((item) => item.Column6)" Format="MMMM/dd/yyyy" />
-    <TnTPropertyColumn Property="@((item) => item.Column7)" />
-    <TnTPropertyColumn Property="@((item) => item.Column8)" DefaultSort="true" />
-    <TnTPropertyColumn Property="@((item) => item.Column9)" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 4" Format="Formatted {0}" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 5" Format="D6" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 6" Format="MMMM/dd/yyyy" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 7" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 8" DefaultSort="true" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 9" />
 </TnTDataGrid>
 
 <TnTDataGrid Name="@(Name + 3)" Items="Items" ShowRowIndex="true" Appearance="DataGridAppearance.Compat" MaxHeight="500" RowClickedCallback="@RowClicked">
     <TnTPropertyColumn Property="@((item) => item.Column1)" />
     <TnTPropertyColumn Property="@((item) => item.Column2)" />
     <TnTPropertyColumn Property="@((item) => item.Column3)" />
-    <TnTPropertyColumn Property="@((item) => item.Column4)" Format="Formatted {0}" />
-    <TnTPropertyColumn Property="@((item) => item.Column5)" Format="D6" />
-    <TnTPropertyColumn Property="@((item) => item.Column6)" Format="MMMM/dd/yyyy" />
-    <TnTPropertyColumn Property="@((item) => item.Column7)" />
-    <TnTPropertyColumn Property="@((item) => item.Column8)" DefaultSort="true" />
-    <TnTPropertyColumn Property="@((item) => item.Column9)" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 4" Format="Formatted {0}" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 5" Format="D6" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 6" Format="MMMM/dd/yyyy" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 7" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 8" DefaultSort="true" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 9" />
 </TnTDataGrid>
 
 <TnTDataGrid Name="@(Name + 4)" Items="Items" Appearance="DataGridAppearance.Stripped | DataGridAppearance.Compat" MaxHeight="500" RowClickedCallback="@RowClicked">
     <TnTPropertyColumn Property="@((item) => item.Column1)" />
     <TnTPropertyColumn Property="@((item) => item.Column2)" />
     <TnTPropertyColumn Property="@((item) => item.Column3)" />
-    <TnTPropertyColumn Property="@((item) => item.Column4)" Format="" />
-    <TnTPropertyColumn Property="@((item) => item.Column5)" Format="D6" />
-    <TnTPropertyColumn Property="@((item) => item.Column6)" Format="MMMM/dd/yyyy" />
-    <TnTPropertyColumn Property="@((item) => item.Column7)" />
-    <TnTPropertyColumn Property="@((item) => item.Column8)" DefaultSort="true" />
-    <TnTPropertyColumn Property="@((item) => item.Column9)" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 4" Format="Formatted {0}" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 5" Format="D6" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 6" Format="MMMM/dd/yyyy" />
+    <TnTPropertyColumn Property="@((item) => item.Column1)" ColumnHeader="Column 7" />
+    <TnTPropertyColumn Property="@((item) => item.Column2)" ColumnHeader="Column 8" DefaultSort="true" />
+    <TnTPropertyColumn Property="@((item) => item.Column3)" ColumnHeader="Column 9" />
 </TnTDataGrid>
-*@
+
 @code {
     [Parameter, EditorRequired]
     public string Name { get; set; } = default!;
 
-    private class DataGridItem {
-        public string Column1 { get; set; } = default!;
-        public int Column2 { get; set; }
-        public DateTime Column3 { get; set; }
-        public string Column4 { get; set; } = default!;
-        public int Column5 { get; set; }
-        public DateTime Column6 { get; set; }
-        public string Column7 { get; set; } = default!;
-        public int Column8 { get; set; }
-        public DateTime Column9 { get; set; }
-
-        public override string ToString() {
-            return $"{Column1}\t{Column2}\t{Column3}";
-        }
-
-    }
-
     private IQueryable<DataGridItem>? Items;
 
-    protected override void OnInitialized() {
-        base.OnInitialized();
-
-        var list = new List<DataGridItem>();
-        for (var i = 0; i < 100; ++i) {
-            var guid = Guid.NewGuid().ToString();
-            var number = Random.Shared.Next(100);
-            var date = new DateTime(Random.Shared.Next(1, 10000), Random.Shared.Next(1, 13), Random.Shared.Next(1, 29));
-            list.Add(new() {
-                    Column1 = guid,
-                    Column2 = number,
-                    Column3 = date,
-                    Column4 = guid,
-                    Column5 = number,
-                    Column6 = date,
-                    Column7 = guid,
-                    Column8 = number,
-                    Column9 = date
-                });
-        }
-
-        Items = list.AsQueryable();
+    protected override async Task OnInitializedAsync() {
+        await base.OnInitializedAsync();
+        Items = (await _repo.Get(null)).Items.AsQueryable();
     }
 
     private void RowClicked(DataGridRowClickEventArgs arg) {
