Updating and simplifing isolated js files.

--- a/LiveTest/LiveTest.Client/Pages/Buttons.razor
+++ b/LiveTest/LiveTest.Client/Pages/Buttons.razor
@@ -3,7 +3,7 @@
 @using TnTComponents.Common
 @using TnTComponents.Enum
 
-<TnTRow>
+<TnTRow FlexWrap="WrapStyle.Wrap">
     <TnTColumn>
         <TnTStack Direction="Orientation.Horizontal">
             <TnTButton Title="Title" Appearance="ButtonAppearance.Elevated" StartIcon="search" EndIcon="home">
