--- a/TnTComponents/Styles/Components/_tabview.scss
+++ b/TnTComponents/Styles/Components/_tabview.scss
@@ -18,6 +18,7 @@
             position: unset;
 
             .tnt-tab-view-button {
+                text-decoration: none;
                 display: flex;
                 align-items: center;
                 outline: none;
@@ -52,8 +53,8 @@
     }
 
     .tnt-tab-active-indicator {
+        display: none;
         position: relative;
-        display: block;
         top: -3px;
         border-radius: 3px 3px 0 0;
         background-color: $tnt-color-primary;
@@ -94,6 +95,16 @@
             i {
                 padding-right: 8px;
             }
+        }
+    }
+
+    .tnt-tab-content {
+        & > * {
+            display: none;
+        }
+
+        & > .active {
+            display: revert;
         }
     }
 }
