Fixed tab view for both interactivity and static rendering.

--- a/LiveTest/LiveTest.Client/Components/TabViewComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/TabViewComponent.razor
@@ -1,6 +1,6 @@
 @using TnTComponents
 @using TnTComponents.Enum
-<TnTTabView Name="@Name" Appearance="@Appearance">
+<TnTTabView Name="@Name" Appearance="@Appearance" class="@($"{Name} tnt-tab-view")">
     @for (var i = 0; i < TabCount; ++i) {
         var j = i;
         var header = $"Header{j + 1}";
