Fixed issues with tab view

--- a/LiveTest/LiveTest.Client/Pages/DataGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/DataGrid.razor
@@ -11,18 +11,19 @@
             Static
         </h3>
         <DataGridComponent Name="Static" />
+        <DataGridComponent Name="A" />
+        <DataGridComponent Name="B" />
 
+        @*
         <h3>
-            Interactive Server
+        Interactive Server
         </h3>
         <DataGridComponent Name="Server" @rendermode="@RenderMode.InteractiveServer" />
 
         <h3>
-            Interactive Web Assembly
+        Interactive Web Assembly
         </h3>
         <DataGridComponent Name="Webassembly" @rendermode="@RenderMode.InteractiveWebAssembly" />
-    </TnTTabChild>
-    <TnTTabChild Title="Paginated">
-
+        *@
     </TnTTabChild>
 </TnTTabView>
